[package]
name = "multi-party-schnorr"
version = "0.3.3"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
curv = { git = "https://github.com/commerceblock/curv" , tag = "v0.2.7", features =  ["ec_secp256k1","merkle"]}

[dependencies.centipede]
git = "https://github.com/commerceblock/centipede"
tag = "v0.2.7"

[dev-dependencies]
hex = "0.3.2"

